# HS-TasNet-NeutoneFX

./: .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  pr-checker.yml
checkpoints/20260318/: model_20260312_232203_vertex-run_config.yaml  model_20260312_232203_vertex-run_model.pt
scripts/: __init__.py  eval.sh  gcp_bootstrap.sh  gcp_submit_train.sh  gcp_vertex_submit.sh  gcs_sync.py  infer.sh  orchestrator_config.py  pr_review.py  train.sh  vertex_build_push.sh  vertex_eval_orchestrator.py  vertex_eval_worker.py  vertex_model_registry.py  vertex_orchestrator.py  vertex_worker.py  vertex_worker_pool.json
src/: export_hs_tasnet.py
src/hs_tasnet/: __init__.py  vertex_eval_orchestrator.py  vertex_orchestrator.py
src/hs_tasnet/cli/: eval_cli.py  export_cli.py  infer_cli.py  main.py  train_cli.py
src/hs_tasnet/config/: defaults.yaml  eval.yaml  export.yaml  gcp.yaml  infer.yaml  paper_hs_tasnet.yaml  train.yaml  train_paper.yaml  vertex_model_evaluation_metrics.yaml
src/hs_tasnet/data/: collate.py  datasets.py  transforms.py
src/hs_tasnet/export/: __init__.py  export_hs_tasnet.py
src/hs_tasnet/infer/: __init__.py  infer.py  realtime.py
tests/: test_checkpointing.py  test_export.py  test_infer_config_resolution.py  test_metrics_contract.py  test_model_contract.py  test_musdb_split_fallback.py  test_shapes.py  test_streaming.py  test_training_controls.py  test_training_performance_controls.py  test_vertex_scripts.py  test_waveform_metrics.py  test_waveform_rescaling.py
(+19 files in other folders)
